<resources>
    <string name="app_name">VocabularyApp</string>
    <string name="txt_title_default">Lemme know your name</string>
    <string name="txt_hint_input">Hello, I\'m..</string>
    <string name="txt_start_button">Let\'s Start</string>
    <string name="txt_title_replace">Tell me your name</string>
    <!-- %1$s string format, dynamic string value   -->
    <string name="txt_greeting">Hi, %1$s !</string>
    <string name="txt_available_vocabulary">Available Vocabulary</string>
    <!-- %1$d string format, dynamic int value, %f for float, %x hexadeximal    -->
    <string name="txt_available_value">%1$d/100</string>
    <string name="txt_my_vocab">My Vocab</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_all_category">All Category</string>
    <string name="txt_add_new_vocab">Add New Vocab</string>
    <string name="txt_name">Name</string>
    <string name="txt_meaning">Meaning</string>
    <string name="txt_category">Category</string>
    <string name="txt_save">Save</string>
    <string name="txt_discard">Discard</string>
</resources>