<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- using appcompact view for better compatibility with older version of android   -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/txt_title_default"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_onboarding"
        app:layout_constraintStart_toStartOf="@id/iv_onboarding"
        app:layout_constraintTop_toBottomOf="@id/iv_onboarding" />

    <!-- imeOption for set enter keyboard to Go   -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name_onboarding"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/txt_hint_input"
        android:imeOptions="actionGo"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/iv_onboarding"
        app:layout_constraintStart_toStartOf="@id/iv_onboarding"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_start"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/txt_start_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/iv_onboarding"
        app:layout_constraintStart_toStartOf="@id/iv_onboarding"
        app:layout_constraintTop_toBottomOf="@id/et_name_onboarding" />

</androidx.constraintlayout.widget.ConstraintLayout>